# paflib

./: Makefile.am  Makefile.in  configure  configure.ac
common/: paf-hwcap.h
dsc/: Makefile.in
ebb/: Makefile.am  Makefile.in  ebb.c
ebb/doc/: libpaf-ebb.3
ebb/paf/: ebb.h
ebb/tests/: test_ebb_child.c  test_ebb_clear_on_close.c  test_ebb_cpu.c  test_ebb_nohandler.c
ppr/: Makefile.am  Makefile.in
ppr/doc/: libpaf-ppr.3
ppr/paf/: ppr.h
ppr/tests/: test_ppr.c
tb/: Makefile.am  Makefile.in
tb/paf/: tb.h
tb/tests/: test_tb.c
